Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Packaging__c.field-meta.xml
<CustomField>
    <fullName>B2B_Packaging__c</fullName>
    <label>Packaging</label>
    <length>255</length>
    <type>Text</type>
</CustomField>