Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Page_title__c.field-meta.xml
<CustomField>
    <fullName>B2B_Page_title__c</fullName>
    <label>Page title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>