Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Path_Length__c.field-meta.xml
<CustomField>
    <fullName>B2B_Path_Length__c</fullName>
    <label>Path Length</label>
    <length>255</length>
    <type>Text</type>
</CustomField>