Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Pipetting_Arms__c.field-meta.xml
<CustomField>
    <fullName>B2B_Pipetting_Arms__c</fullName>
    <label>Pipetting Arms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>