Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Pipetting_Module__c.field-meta.xml
<CustomField>
    <fullName>B2B_Pipetting_Module__c</fullName>
    <label>B2B Pipetting Module</label>
    <length>255</length>
    <type>Text</type>
</CustomField>