Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Planar_or_3D_Imaging__c.field-meta.xml
<CustomField>
    <fullName>B2B_Planar_or_3D_Imaging__c</fullName>
    <label>Planar or 3D Imaging</label>
    <length>255</length>
    <type>Text</type>
</CustomField>