Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Product_Compatibility__c.field-meta.xml
<CustomField>
    <fullName>B2B_Product_Compatibility__c</fullName>
    <description>Used to select the values for products. Perk-75</description>
    <label>Product Compatibility</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2400 Series Analyzer</fullName>
            </value>
            <value>
                <fullName>2400 Series Elemental Analyzer</fullName>
            </value>
            <value>
                <fullName>2400 Series II Analyzer</fullName>
            </value>
            <value>
                <fullName>2400 Series II CHNS/O</fullName>
            </value>
            <value>
                <fullName>2410 Series II Analyzer</fullName>
            </value>
            <value>
                <fullName>AAnalyst</fullName>
            </value>
            <value>
                <fullName>AAnalyst 100</fullName>
            </value>
            <value>
                <fullName>AAnalyst 200</fullName>
            </value>
            <value>
                <fullName>AAnalyst 300</fullName>
            </value>
            <value>
                <fullName>AAnalyst 400</fullName>
            </value>
            <value>
                <fullName>AAnalyst 700</fullName>
            </value>
            <value>
                <fullName>AAnalyst 800</fullName>
            </value>
            <value>
                <fullName>Clarus 480</fullName>
            </value>
            <value>
                <fullName>Clarus 580</fullName>
            </value>
            <value>
                <fullName>Clarus 590</fullName>
            </value>
            <value>
                <fullName>Clarus 590 PPC</fullName>
            </value>
            <value>
                <fullName>Clarus 680</fullName>
            </value>
            <value>
                <fullName>Clarus 690</fullName>
            </value>
            <value>
                <fullName>Clarus 690 PPC</fullName>
            </value>
            <value>
                <fullName>Differential Scanning Calorimeter DSC</fullName>
            </value>
            <value>
                <fullName>ELAN 6x00</fullName>
            </value>
            <value>
                <fullName>ELAN 9000</fullName>
            </value>
            <value>
                <fullName>ELAN DRC II</fullName>
            </value>
            <value>
                <fullName>ELAN DRC-e</fullName>
            </value>
            <value>
                <fullName>LAMBDA</fullName>
            </value>
            <value>
                <fullName>NexION 300</fullName>
            </value>
            <value>
                <fullName>NexION 350</fullName>
            </value>
            <value>
                <fullName>PinAAcle</fullName>
            </value>
            <value>
                <fullName>PinAAcle 900</fullName>
            </value>
            <value>
                <fullName>RGA Model 1015</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>