Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Product_Gross_weight__c.field-meta.xml
<CustomField>
    <fullName>B2B_Product_Gross_weight__c</fullName>
    <label>Product Gross weight</label>
    <length>255</length>
    <type>Text</type>
</CustomField>