Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>B2B_Product_Group__c</fullName>
    <description>Used to select groups for products. Perk-75</description>
    <label>Product Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AA Compressors</fullName>
            </value>
            <value>
                <fullName>Application Pack</fullName>
            </value>
            <value>
                <fullName>Blowers and Vents</fullName>
            </value>
            <value>
                <fullName>Burner Head Replacement Parts</fullName>
            </value>
            <value>
                <fullName>Caps/Septa</fullName>
            </value>
            <value>
                <fullName>Cartridge Columns</fullName>
            </value>
            <value>
                <fullName>Cell Holders &amp; Changers</fullName>
            </value>
            <value>
                <fullName>Chromatography</fullName>
            </value>
            <value>
                <fullName>Crimpers</fullName>
            </value>
            <value>
                <fullName>Decapper</fullName>
            </value>
            <value>
                <fullName>Detectors &amp; Kits</fullName>
            </value>
            <value>
                <fullName>Falling Number, AM, IM 8800</fullName>
            </value>
            <value>
                <fullName>Fiber Optic Accessories</fullName>
            </value>
            <value>
                <fullName>Filter Disks</fullName>
            </value>
            <value>
                <fullName>Fittings</fullName>
            </value>
            <value>
                <fullName>Flow Injection Tubing</fullName>
            </value>
            <value>
                <fullName>Flow-Through Cells</fullName>
            </value>
            <value>
                <fullName>Gas/Liquid Separators and Replacement Parts</fullName>
            </value>
            <value>
                <fullName>GC Compressors</fullName>
            </value>
            <value>
                <fullName>Hollow Cathode Lamp HCL</fullName>
            </value>
            <value>
                <fullName>Hydrogen Generators</fullName>
            </value>
            <value>
                <fullName>ICP-OES Compressors</fullName>
            </value>
            <value>
                <fullName>Injection Port Septa</fullName>
            </value>
            <value>
                <fullName>Kits</fullName>
            </value>
            <value>
                <fullName>Liner o-ring</fullName>
            </value>
            <value>
                <fullName>Mass Spectral Library</fullName>
            </value>
            <value>
                <fullName>Nitrogen Generators</fullName>
            </value>
            <value>
                <fullName>O-Rings</fullName>
            </value>
            <value>
                <fullName>Pads</fullName>
            </value>
            <value>
                <fullName>Regulators</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>