Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Product_Level__c.field-meta.xml
<CustomField>
    <fullName>B2B_Product_Level__c</fullName>
    <label>B2B Product Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>