Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>B2B_Product_Line__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AA</fullName>
            </value>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>BIO</fullName>
            </value>
            <value>
                <fullName>CLR</fullName>
            </value>
            <value>
                <fullName>CSB</fullName>
            </value>
            <value>
                <fullName>DAB</fullName>
            </value>
            <value>
                <fullName>DAO</fullName>
            </value>
            <value>
                <fullName>DEL</fullName>
            </value>
            <value>
                <fullName>DIA</fullName>
            </value>
            <value>
                <fullName>DL</fullName>
            </value>
            <value>
                <fullName>DLS</fullName>
            </value>
            <value>
                <fullName>EZR</fullName>
            </value>
            <value>
                <fullName>FAP</fullName>
            </value>
            <value>
                <fullName>FN</fullName>
            </value>
            <value>
                <fullName>FTF</fullName>
            </value>
            <value>
                <fullName>GC</fullName>
            </value>
            <value>
                <fullName>GM</fullName>
            </value>
            <value>
                <fullName>HCA</fullName>
            </value>
            <value>
                <fullName>HCS</fullName>
            </value>
            <value>
                <fullName>HTS</fullName>
            </value>
            <value>
                <fullName>ICP</fullName>
            </value>
            <value>
                <fullName>IMF</fullName>
            </value>
            <value>
                <fullName>IMG</fullName>
            </value>
            <value>
                <fullName>INV</fullName>
            </value>
            <value>
                <fullName>IR</fullName>
            </value>
            <value>
                <fullName>LC</fullName>
            </value>
            <value>
                <fullName>LCA</fullName>
            </value>
            <value>
                <fullName>LCM</fullName>
            </value>
            <value>
                <fullName>LM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>