Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Product_Page_Date_Expire__c.field-meta.xml
<CustomField>
    <fullName>B2B_Product_Page_Date_Expire__c</fullName>
    <label>Product Page Date Expire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>