Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Product_Resources_Links__c.field-meta.xml
<CustomField>
    <fullName>B2B_Product_Resources_Links__c</fullName>
    <label>Product Resources (Links)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>