Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Product_Resources_Videos__c.field-meta.xml
<CustomField>
    <fullName>B2B_Product_Resources_Videos__c</fullName>
    <label>Product Resources (Videos)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>