Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Product_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>B2B_Product_Sort_Order__c</fullName>
    <inlineHelpText>This is used on the Commerce Site to show products in a sort order</inlineHelpText>
    <label>Best Sellers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>