Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>B2B_Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Consumables</fullName>
            </value>
            <value>
                <fullName>Instruments</fullName>
            </value>
            <value>
                <fullName>Reagents</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Software and Informatics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>