Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Quantity_in_a_Package_Amount__c.field-meta.xml
<CustomField>
    <fullName>B2B_Quantity_in_a_Package_Amount__c</fullName>
    <label>Quantity in a Package Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>