Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Quantity_In_Package__c.field-meta.xml
<CustomField>
    <fullName>B2B_Quantity_In_Package__c</fullName>
    <label>B2B Quantity In Package</label>
    <length>255</length>
    <type>Text</type>
</CustomField>