Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Receptor_Family__c.field-meta.xml
<CustomField>
    <fullName>B2B_Receptor_Family__c</fullName>
    <label>Receptor Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>