Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Reflectance__c.field-meta.xml
<CustomField>
    <fullName>B2B_Reflectance__c</fullName>
    <label>Reflectance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>