Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Related_Products__c.field-meta.xml
<CustomField>
    <fullName>B2B_Related_Products__c</fullName>
    <label>Related Products</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>