Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_RelatedProdCompatibleWithManufac__c.field-meta.xml
<CustomField>
    <fullName>B2B_RelatedProdCompatibleWithManufac__c</fullName>
    <label>Related Products Compatible with Manufac</label>
    <length>255</length>
    <type>Text</type>
</CustomField>