Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_RelatedProductsBuyWithBundleKits__c.field-meta.xml
<CustomField>
    <fullName>B2B_RelatedProductsBuyWithBundleKits__c</fullName>
    <label>Related Products Buy With Bundle Kits</label>
    <length>255</length>
    <type>Text</type>
</CustomField>