Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Retired_Product_Model__c.field-meta.xml
<CustomField>
    <fullName>B2B_Retired_Product_Model__c</fullName>
    <label>Retired Product Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>