Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Risk_Phrases__c.field-meta.xml
<CustomField>
    <fullName>B2B_Risk_Phrases__c</fullName>
    <label>Risk Phrases</label>
    <length>255</length>
    <type>Text</type>
</CustomField>