Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Safety_Phrases__c.field-meta.xml
<CustomField>
    <fullName>B2B_Safety_Phrases__c</fullName>
    <label>Safety Phrases</label>
    <length>255</length>
    <type>Text</type>
</CustomField>