Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Sales_Org_And_Sales_Status__c.field-meta.xml
<CustomField>
    <fullName>B2B_Sales_Org_And_Sales_Status__c</fullName>
    <label>Sales Org And Sales Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1US0-Z3</fullName>
            </value>
            <value>
                <fullName>1US0-ZW</fullName>
            </value>
            <value>
                <fullName>1US0-ZY</fullName>
            </value>
            <value>
                <fullName>ATS0-Z3</fullName>
            </value>
            <value>
                <fullName>ATS0-ZW</fullName>
            </value>
            <value>
                <fullName>ATS0-ZY</fullName>
            </value>
            <value>
                <fullName>AUS0-ZW</fullName>
            </value>
            <value>
                <fullName>AUS0-ZY</fullName>
            </value>
            <value>
                <fullName>BES0-Z3</fullName>
            </value>
            <value>
                <fullName>BES0-ZW</fullName>
            </value>
            <value>
                <fullName>BES0-ZY</fullName>
            </value>
            <value>
                <fullName>BRS0-Z3</fullName>
            </value>
            <value>
                <fullName>BRS0-ZW</fullName>
            </value>
            <value>
                <fullName>BRS0-ZY</fullName>
            </value>
            <value>
                <fullName>CAS0-Z3</fullName>
            </value>
            <value>
                <fullName>CAS0-ZW</fullName>
            </value>
            <value>
                <fullName>CAS0-ZY</fullName>
            </value>
            <value>
                <fullName>CHS0-Z3</fullName>
            </value>
            <value>
                <fullName>CHS0-ZW</fullName>
            </value>
            <value>
                <fullName>CHS0-ZY</fullName>
            </value>
            <value>
                <fullName>CL10-ZW</fullName>
            </value>
            <value>
                <fullName>CL10-ZY</fullName>
            </value>
            <value>
                <fullName>CN10-9N</fullName>
            </value>
            <value>
                <fullName>CN10-ZW</fullName>
            </value>
            <value>
                <fullName>CN10-ZY</fullName>
            </value>
            <value>
                <fullName>DES0-Z3</fullName>
            </value>
            <value>
                <fullName>DES0-ZW</fullName>
            </value>
            <value>
                <fullName>DES0-ZY</fullName>
            </value>
            <value>
                <fullName>DKS0-Z3</fullName>
            </value>
            <value>
                <fullName>DKS0-ZW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>