Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Sales_Org_Item_Category_Group__c.field-meta.xml
<CustomField>
    <fullName>B2B_Sales_Org_Item_Category_Group__c</fullName>
    <label>B2B Sales Org Item Category Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>