Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Sales_Status_Description__c.field-meta.xml
<CustomField>
    <fullName>B2B_Sales_Status_Description__c</fullName>
    <label>B2B Sales Status Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>