Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_SalesOrgItemCategoryGroupDesc__c.field-meta.xml
<CustomField>
    <fullName>B2B_SalesOrgItemCategoryGroupDesc__c</fullName>
    <label>B2B SalesOrgItemCategoryGroupDesc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>