Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Sample_Type__c.field-meta.xml
<CustomField>
    <fullName>B2B_Sample_Type__c</fullName>
    <description>Used to select sample type for products. Perk-75</description>
    <label>Sample Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Liquid</fullName>
            </value>
            <value>
                <fullName>LPG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>