Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Second_Messenger_Release__c.field-meta.xml
<CustomField>
    <fullName>B2B_Second_Messenger_Release__c</fullName>
    <label>Second Messenger Release</label>
    <length>255</length>
    <type>Text</type>
</CustomField>