Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Shipping_Information__c.field-meta.xml
<CustomField>
    <fullName>B2B_Shipping_Information__c</fullName>
    <label>Shipping Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>