Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>B2B_Shipping_Method__c</fullName>
    <label>Shipping Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>