Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_SKU__c.field-meta.xml
<CustomField>
    <fullName>B2B_SKU__c</fullName>
    <label>B2B SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>