Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Sku_Sales_Count__c.field-meta.xml
<CustomField>
    <fullName>B2B_Sku_Sales_Count__c</fullName>
    <label>Sku Sales Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>