Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Social_Share_Image__c.field-meta.xml
<CustomField>
    <fullName>B2B_Social_Share_Image__c</fullName>
    <label>Social Share Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>