Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Special_Ordering_Information__c.field-meta.xml
<CustomField>
    <fullName>B2B_Special_Ordering_Information__c</fullName>
    <label>Special Ordering Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>