Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Special_Shipping_Instructions__c.field-meta.xml
<CustomField>
    <fullName>B2B_Special_Shipping_Instructions__c</fullName>
    <label>Special Shipping Instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>