Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Species_Reactivity__c.field-meta.xml
<CustomField>
    <fullName>B2B_Species_Reactivity__c</fullName>
    <label>Species Reactivity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>