Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Specific_Activity__c.field-meta.xml
<CustomField>
    <fullName>B2B_Specific_Activity__c</fullName>
    <label>Specific Activity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>