Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Storage_Condition__c.field-meta.xml
<CustomField>
    <fullName>B2B_Storage_Condition__c</fullName>
    <label>Storage Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>