Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Sub_Category_1__c.field-meta.xml
<CustomField>
    <fullName>B2B_Sub_Category_1__c</fullName>
    <label>Sub Category 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>