Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Target_Protein_UniProt__c.field-meta.xml
<CustomField>
    <fullName>B2B_Target_Protein_UniProt__c</fullName>
    <label>Target Protein UniProt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>