Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Targeted_Persona__c.field-meta.xml
<CustomField>
    <fullName>B2B_Targeted_Persona__c</fullName>
    <label>Targeted Persona</label>
    <length>255</length>
    <type>Text</type>
</CustomField>