Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Taxonomy__c.field-meta.xml
<CustomField>
    <fullName>B2B_Taxonomy__c</fullName>
    <label>Taxonomy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>