Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Technology__c.field-meta.xml
<CustomField>
    <fullName>B2B_Technology__c</fullName>
    <description>Used to select the technology for products. Pekr-75</description>
    <label>Technology</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Atomic Absorption</fullName>
            </value>
            <value>
                <fullName>Cartridge</fullName>
            </value>
            <value>
                <fullName>Cartridge Column</fullName>
            </value>
            <value>
                <fullName>HPLC</fullName>
            </value>
            <value>
                <fullName>ICP Mass Spectrometry</fullName>
            </value>
            <value>
                <fullName>Infrared IR</fullName>
            </value>
            <value>
                <fullName>Thermal Analysis</fullName>
            </value>
            <value>
                <fullName>UV/Visible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>